# OVMobileBench

./: .codecov.yml  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  ARCHITECTURE.md  BUNDLE_COMPARISON_REPORT.md  CHANGELOG.md  CHECKLIST_REPORT.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  get_statistics.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: codecov.yml
.github/workflows/: bench.yml  ci-orchestrator.yml  e2e-android-test.yml  pre-commit.yml  reusable-ci-simple.yml  reusable-ci.yml  stage-build.yml  stage-device-tests.yml  stage-lint-test.yml  stage-pre-commit.yml  stage-test.yml  stage-validation.yml
docs/: android-setup.md  android_installer.md  api-reference.md  architecture.md  benchmarking.md  build-guide.md  ci-cd.md  configuration.md  development.md  device-setup.md  e2e-testing.md  getting-started.md  openvino-modes.md  test-skip-list.md  testing.md  troubleshooting.md  user-guide.md
docs/internal_experimental_documentation/: OVBench_All_Files_Bundle.md  OVBench_Mobile_Benchmark_Architecture.md  OVBench_Project_Preflight_Checklist.md  OVBench_User_Documentation.md  OVMobileBench_All_Files_Bundle.md  OVMobileBench_Mobile_Benchmark_Architecture.md  OVMobileBench_Project_Preflight_Checklist.md  OVMobileBench_User_Documentation.md  ovmobilebench-android-installer-architecture.md
experiments/: android_example.yaml  android_x86_64_ci.yaml  raspberry_pi_example.yaml  ssh_localhost.yaml  ssh_localhost_ci.yaml  ssh_test.yaml  ssh_test_ci.yaml  windows_localhost.yaml
helpers/: __init__.py  display_results.py  emulator_helper.py  model_helper.py  pr_comment.py
helpers/scripts/: setup_kvm_linux.sh
heplers/: model_helper.py  validate_results.py
ovbench/: __init__.py  cli.py  pipeline.py  typer_patch.py
ovbench/builders/: __init__.py  openvino.py
ovbench/config/: __init__.py  loader.py  schema.py
ovbench/core/: __init__.py  artifacts.py  errors.py  fs.py  logging.py  shell.py
ovbench/devices/: __init__.py  android.py  base.py
ovbench/packaging/: __init__.py  packager.py
ovbench/parsers/: __init__.py  benchmark_parser.py
ovbench/report/: __init__.py  (+1 more)
ovmobilebench/: __init__.py  cli.py  pipeline.py  typer_patch.py
scripts/: generate_ssh_config.py  setup_android_tools.py  setup_ssh_ci.ps1
tests/: __init__.py  conftest.py  skip_list.txt  test_android_device.py  test_android_device_complete.py  test_android_setup.py  test_builders_openvino.py  test_cli.py  test_config.py  test_config_loader.py  test_core_artifacts.py  test_core_fs.py  test_core_logging.py  test_core_shell.py  test_devices.py  test_fetch_versions.py  test_generate_ssh_config.py  test_openvino_config.py  test_packaging_packager.py  test_parser.py  test_pipeline.py  test_report_sink.py  test_runners_benchmark.py  test_ssh_device.py  test_ssh_device_ci.py  test_typer_patch.py
(+115 files in other folders)
